--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2a8441b7d7ca5eed87c54c4baefa16c2fc03dec1bd4b3e03055c52dabf99d33f"
+  "signature": "sha256:ca615b3dae87eba41a7dabbbf7aae18142bb66c86f1d4420d1f9731f2b67be8d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -89,23 +89,23 @@
       "opex_gr   = 0.02    # 2%/yr operations expense growth rate\n",
       "advt_yr   = 75e3    # $75,000/yr advertisement revenue\n",
       "advt_gr   = 0.04    # 4%/yr advertisement revenue growth rate\n",
-      "bene_yr   = 100e3   # $100,000/yr parking and other benefits\n",
+      "benf_yr   = 100e3   # $100,000/yr parking and other benefits\n",
       "ovhl      = 350e3   # $350,000 major overhaul cost\n",
       "ovhl_sd   = 15      # scheduled year of major overhaul  \n",
       "term      = 150e3   # $150,000 terminal/salvage value\n",
       "\n",
-      "# Setup the cashflows for the recurring costs and revenues\n",
+      "# 1. Setup the cashflows for the recurring costs and revenues\n",
       "main = [-main_yr]*life\n",
       "opex = [fi.comp(-opex_yr, n, opex_gr) for n in range(life)]\n",
       "advt = [fi.comp( advt_yr, n, advt_gr) for n in range(life)]\n",
-      "bene = [bene_yr]*life\n",
+      "benf = [benf_yr]*life\n",
       "\n",
-      "# Combine the above cashflows and mixin the onetime costs/revenues\n",
-      "cf           = [-capx] + [main[i]+opex[i]+advt[i]+bene[i] for i in range(life)]\n",
+      "# 2. Combine the above cashflows and mixin the onetime costs/revenues\n",
+      "cf           = [-capx] + [main[n]+opex[n]+advt[n]+benf[n] for n in range(life)]\n",
       "cf[ovhl_sd] += -ovhl\n",
       "cf[life]    += +term\n",
       "\n",
-      "# Compute the NPV of the project cashflows\n",
+      "# 3. Compute the NPV of the project cashflows\n",
       "npv = fi.npv(cf, r)\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
@@ -123,6 +123,18 @@
       }
      ],
      "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<b>Aside</b>: In the previous question steps 1 and 2 can be repalced with the following more compact but less readable code:\n",
+      "<code>\n",
+      "  cf = [-capx] + [-main_yr+fi.comp(-opex_yr,n,opex_gr)+fi.comp(advt_yr,n,advt_gr)+benf_yr for n in range(life)]\n",
+      "  cf[ovhl_sd] += -ovhl\n",
+      "  cf[life]    += +term\n",
+      " </code>"
+     ]
     },
     {
      "cell_type": "markdown",
@@ -575,14 +587,7 @@
         "Free Cash Flow   28524158  \n",
         "Terminal Value      1e+08  \n",
         "\n",
-        "[11 rows x 11 columns]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "[11 rows x 11 columns]\n",
         "\n",
         "\n"
        ]
