--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ca615b3dae87eba41a7dabbbf7aae18142bb66c86f1d4420d1f9731f2b67be8d"
+  "signature": "sha256:857e29107ba0a0b48c161d76086ef7e34792961e456a3419bd5a04b42212e0d9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -128,12 +128,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<b>Aside</b>: In the previous question steps 1 and 2 can be repalced with the following more compact but less readable code:\n",
-      "<code>\n",
-      "  cf = [-capx] + [-main_yr+fi.comp(-opex_yr,n,opex_gr)+fi.comp(advt_yr,n,advt_gr)+benf_yr for n in range(life)]\n",
-      "  cf[ovhl_sd] += -ovhl\n",
-      "  cf[life]    += +term\n",
-      " </code>"
+      "<b>Aside</b>: In the previous question steps 1 and 2 can be repalced with the following more compact but less readable \n",
+      "code:<pre><code>cf = [-capx] + [-main_yr+fi.comp(-opex_yr,n,opex_gr)+fi.comp(advt_yr,n,advt_gr)+benf_yr for n in range(life)]\n",
+      "cf[ovhl_sd] += -ovhl\n",
+      "cf[life]    += +term</code></pre>"
      ]
     },
     {
