--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:857e29107ba0a0b48c161d76086ef7e34792961e456a3419bd5a04b42212e0d9"
+  "signature": "sha256:e5dba43023bcf93d4c0c4a24b3257617c40e53e8de3839bfb688a7353ba202a4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -129,9 +129,7 @@
      "metadata": {},
      "source": [
       "<b>Aside</b>: In the previous question steps 1 and 2 can be repalced with the following more compact but less readable \n",
-      "code:<pre><code>cf = [-capx] + [-main_yr+fi.comp(-opex_yr,n,opex_gr)+fi.comp(advt_yr,n,advt_gr)+benf_yr for n in range(life)]\n",
-      "cf[ovhl_sd] += -ovhl\n",
-      "cf[life]    += +term</code></pre>"
+      "code:<pre><code>cf = [-capx] + [-main_yr+fi.comp(-opex_yr,n,opex_gr)+fi.comp(advt_yr,n,advt_gr)+benf_yr for n in range(life)]<br>cf[ovhl_sd] += -ovhl<br>cf[life] += +term</code></pre>"
      ]
     },
     {
