--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e5dba43023bcf93d4c0c4a24b3257617c40e53e8de3839bfb688a7353ba202a4"
+  "signature": "sha256:9d800243d571c5cb59e71c4b73bdb0121825d3d93a3f4f43d317dce1f8bdde4d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -128,8 +128,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<b>Aside</b>: In the previous question steps 1 and 2 can be repalced with the following more compact but less readable \n",
-      "code:<pre><code>cf = [-capx] + [-main_yr+fi.comp(-opex_yr,n,opex_gr)+fi.comp(advt_yr,n,advt_gr)+benf_yr for n in range(life)]<br>cf[ovhl_sd] += -ovhl<br>cf[life] += +term</code></pre>"
+      "<b>Aside</b>: In the previous question the following more compact but less readable code can obviate the need for the fours lists (main, opex, advt, and benf):\n",
+      "<pre><code>cf = [-capx] + [-main_yr+fi.comp(-opex_yr,n,opex_gr)+fi.comp(advt_yr,n,advt_gr)+benf_yr for n in range(life)]</code></pre>"
      ]
     },
     {
