--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ed3678b68d805b9c4f3ce89dd7a28e07d4d96477fafc7d2aacd56aa0fdba9bb5"
+  "signature": "sha256:986a7291ae01cf26b67c580ff4deb542cfb925c2aeff0a73e28cb93cdfac8b0d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -94,18 +94,18 @@
       "ovhl_sd   = 15      # scheduled year of major overhaul  \n",
       "term      = 150e3   # $150,000 terminal/salvage value\n",
       "\n",
-      "# 1. Setup the cashflows for the recurring costs and revenues\n",
+      "# Setup the cashflows for the recurring costs and revenues\n",
       "main = [-main_yr]*life\n",
       "opex = [fi.comp(-opex_yr, n, opex_gr) for n in range(life)]\n",
       "advt = [fi.comp( advt_yr, n, advt_gr) for n in range(life)]\n",
       "benf = [benf_yr]*life\n",
       "\n",
-      "# 2. Combine the above cashflows and mixin the onetime costs/revenues\n",
+      "# Combine the above cashflows and mixin the onetime costs/revenues\n",
       "cf           = [-capx] + [main[n]+opex[n]+advt[n]+benf[n] for n in range(life)]\n",
       "cf[ovhl_sd] += -ovhl\n",
       "cf[life]    += +term\n",
       "\n",
-      "# 3. Compute the NPV of the project cashflows\n",
+      "# Compute the NPV of the project cashflows\n",
       "npv = fi.npv(cf, r)\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
@@ -388,8 +388,8 @@
       "cf    = [nopat[i]+dep              for i in range(life)]\n",
       "\n",
       "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
-      "fcf        = [-capx] + cf \n",
-      "npv        = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
+      "fcf   = [-capx] + cf \n",
+      "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
       "print(\"\\nProject NPV = %d\\n\" % fi.rnd(npv))\n",
       "\n",
       "# Cashflow Table\n",
@@ -509,8 +509,8 @@
       "cf    = [nopat[i]+dep              for i in range(life)]\n",
       "\n",
       "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
-      "fcf        = [-capx] + cf \n",
-      "npv        = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
+      "fcf   = [-capx] + cf \n",
+      "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
       "print(\"\\nProject NPV = %d\\n\" % fi.rnd(npv))\n",
       "\n",
       "# Cashflow Table\n",
