--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:986a7291ae01cf26b67c580ff4deb542cfb925c2aeff0a73e28cb93cdfac8b0d"
+  "signature": "sha256:de0ccba08020902bcbb59799de5da53b1f66a8656d04995783b8999063b5222c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -321,8 +321,7 @@
       "investment  = 100e3 # New tech. cost\n",
       "\n",
       "# Cashflows: Investment and the delta of new and old revenues\n",
-      "cf = [-investment] + [0]*life\n",
-      "for i in range(life): cf[i+1] = rev_new[i] - rev_old[i]\n",
+      "cf = [-investment] + [rev_new[n]-rev_old[n] for n in range(life)]\n",
       "npv = fi.npv(cf, r)\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
