--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:622eb15dab6e42931762764748b233d15384ad17339bfc3be4d558035afd5bd3"
+  "signature": "sha256:d399fa4abdd87149f3766d10822fcc6792005a0cf17ed0d3a60725cde7d8f0bc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -123,7 +123,7 @@
      "metadata": {},
      "source": [
       "###Question 4\n",
-      "(10 points) Johnny and Darren both earn \\100 working on their respective neighbors' big \n",
+      "(10 points) Johnny and Darren both earn \\$100 working on their respective neighbors' big \n",
       "farms. Johnny puts his $100 in the piggy bank that his parents gave him to encourage him \n",
       "to save. Darren puts his money in a savings account his parents set up for him. The \n",
       "savings account pays 3% interest. They both take their money out after 5 years. How much \n",
