--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:de0ccba08020902bcbb59799de5da53b1f66a8656d04995783b8999063b5222c"
+  "signature": "sha256:4222dd662e150228140c4329f7ae27860e112c856049d953d2f2b29e323b3143"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -391,24 +391,36 @@
       "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
       "print(\"\\nProject NPV = %d\\n\" % fi.rnd(npv))\n",
       "\n",
-      "# Cashflow Table\n",
+      "# Cashflow Statement\n",
       "from pandas import DataFrame \n",
-      "data  = {'Revenue':           [0]     + rev, \n",
-      "         'COGS':              [0]     + cogs, \n",
-      "         'SG&A':              [0]     + ([-sga]*life),\n",
-      "         'Less Dep':          [0]     + ([-dep]*life), \n",
-      "         'Op. Profits':       [0]     + oppft, \n",
-      "         'Tax':               [0]     + taxes, \n",
-      "         'NOPAT':             [0]     + nopat,\n",
-      "         'Plus Dep':          [0]     + ([dep]*life),\n",
-      "         'CAPX':              [-capx] + ([0]*life),\n",
-      "         'Free Cash Flow':    fcf,\n",
-      "         'Terminal Value':    ([None]*life)+[term]}\n",
-      "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Op. Profits', \n",
-      "         'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow', \n",
-      "         'Terminal Value']\n",
-      "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)\n",
-      "print(\"\\n\")\n",
+      "col_names  = range(beg, end+1)\n",
+      "row_labels = [\n",
+      "    'Revenue',               #  1\n",
+      "    'COGS',                  #  2\n",
+      "    'SG&A',                  #  3\n",
+      "    'Less Dep',              #  4\n",
+      "    'Op. Profits',           #  5\n",
+      "    'Tax',                   #  6\n",
+      "    'NOPAT',                 #  7\n",
+      "    'Plus Dep',              #  8\n",
+      "    'CAPX',                  #  9\n",
+      "    'Free Cash Flow',        # 10\n",
+      "    'Terminal Value'         # 11\n",
+      "]\n",
+      "row_data   = [\n",
+      "    [0]     + rev,           #  1\n",
+      "    [0]     + cogs,          #  2\n",
+      "    [0]     + ([-sga]*life), #  3\n",
+      "    [0]     + ([-dep]*life), #  4\n",
+      "    [0]     + oppft,         #  5\n",
+      "    [0]     + taxes,         #  6\n",
+      "    [0]     + nopat,         #  7\n",
+      "    [0]     + ([dep]*life),  #  8\n",
+      "    [-capx] + ([0]*life),    #  9\n",
+      "    fcf,                     # 10 \n",
+      "    ([0]*life)+[term]        # 11\n",
+      "]\n",
+      "print DataFrame(row_data, columns=col_names, index=row_labels, dtype=int),\"\\n\"\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
      ],
@@ -422,18 +434,18 @@
         "\n",
         "Project NPV = 9815100\n",
         "\n",
-        "                     2012      2013       2014       2015       2016\n",
-        "Revenue                 0  15000000   18750000   23437500   29296875\n",
-        "COGS                    0  -9000000  -11250000  -14062500  -17578125\n",
-        "SG&A                    0         0          0          0          0\n",
-        "Less Dep                0  -3000000   -3000000   -3000000   -3000000\n",
-        "Op. Profits             0   3000000    4500000    6375000    8718750\n",
-        "Tax                     0  -1050000   -1575000   -2231250   -3051562\n",
-        "NOPAT                   0   1950000    2925000    4143750    5667187\n",
-        "Plus Dep                0   3000000    3000000    3000000    3000000\n",
-        "CAPX            -12000000         0          0          0          0\n",
-        "Free Cash Flow  -12000000   4950000    5925000    7143750    8667187\n",
-        "Terminal Value       None      None       None       None    5000000\n",
+        "                    2012      2013      2014      2015      2016\n",
+        "Revenue                0  15000000  18750000  23437500  29296875\n",
+        "COGS                   0  -9000000 -11250000 -14062500 -17578125\n",
+        "SG&A                   0         0         0         0         0\n",
+        "Less Dep               0  -3000000  -3000000  -3000000  -3000000\n",
+        "Op. Profits            0   3000000   4500000   6375000   8718750\n",
+        "Tax                    0  -1050000  -1575000  -2231250  -3051562\n",
+        "NOPAT                  0   1950000   2925000   4143750   5667187\n",
+        "Plus Dep               0   3000000   3000000   3000000   3000000\n",
+        "CAPX           -12000000         0         0         0         0\n",
+        "Free Cash Flow -12000000   4950000   5925000   7143750   8667187\n",
+        "Terminal Value         0         0         0         0   5000000\n",
         "\n",
         "[11 rows x 5 columns]"
        ]
@@ -442,8 +454,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
-        "\n",
+        " \n",
         "\n"
        ]
       },
@@ -512,24 +523,36 @@
       "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
       "print(\"\\nProject NPV = %d\\n\" % fi.rnd(npv))\n",
       "\n",
-      "# Cashflow Table\n",
+      "# Cashflow Statement\n",
       "from pandas import DataFrame \n",
-      "data  = {'Revenue':           [0]     + rev, \n",
-      "         'COGS':              [0]     + cogs, \n",
-      "         'SG&A':              [0]     + ([-sga]*life),\n",
-      "         'Less Dep':          [0]     + ([-dep]*life), \n",
-      "         'Op. Profits':       [0]     + oppft, \n",
-      "         'Tax':               [0]     + taxes, \n",
-      "         'NOPAT':             [0]     + nopat,\n",
-      "         'Plus Dep':          [0]     + ([dep]*life),\n",
-      "         'CAPX':              [-capx] + ([0]*life),\n",
-      "         'Free Cash Flow':    fcf,\n",
-      "         'Terminal Value':    ([None]*life)+[term]}\n",
-      "cols  = ['Revenue', 'COGS', 'SG&A', 'Less Dep', 'Op. Profits', \n",
-      "         'Tax', 'NOPAT', 'Plus Dep', 'CAPX', 'Free Cash Flow', \n",
-      "         'Terminal Value']\n",
-      "print(DataFrame(data, columns=cols, index=range(beg,end+1), dtype=int).T)\n",
-      "print(\"\\n\")\n",
+      "col_names  = range(beg, end+1)\n",
+      "row_labels = [\n",
+      "    'Revenue',               #  1\n",
+      "    'COGS',                  #  2\n",
+      "    'SG&A',                  #  3\n",
+      "    'Less Dep',              #  4\n",
+      "    'Op. Profits',           #  5\n",
+      "    'Tax',                   #  6\n",
+      "    'NOPAT',                 #  7\n",
+      "    'Plus Dep',              #  8\n",
+      "    'CAPX',                  #  9\n",
+      "    'Free Cash Flow',        # 10\n",
+      "    'Terminal Value'         # 11\n",
+      "]\n",
+      "row_data   = [\n",
+      "    [0]     + rev,           #  1\n",
+      "    [0]     + cogs,          #  2\n",
+      "    [0]     + ([-sga]*life), #  3\n",
+      "    [0]     + ([-dep]*life), #  4\n",
+      "    [0]     + oppft,         #  5\n",
+      "    [0]     + taxes,         #  6\n",
+      "    [0]     + nopat,         #  7\n",
+      "    [0]     + ([dep]*life),  #  8\n",
+      "    [-capx] + ([0]*life),    #  9\n",
+      "    fcf,                     # 10 \n",
+      "    ([0]*life)+[term]        # 11\n",
+      "]\n",
+      "print DataFrame(row_data, columns=col_names, index=row_labels, dtype=int),\"\\n\"\n",
       "\n",
       "ans.amt(fi.rnd(npv))"
      ],
@@ -543,47 +566,33 @@
         "\n",
         "Project NPV = 43528493\n",
         "\n",
-        "                        0          1          2          3          4   \\\n",
-        "Revenue                  0   33000000   34650000   36382500   38201625   \n",
-        "COGS                     0  -12000000  -12480000  -12979200  -13498368   \n",
-        "SG&A                     0   -1000000   -1000000   -1000000   -1000000   \n",
-        "Less Dep                 0  -20000000  -20000000  -20000000  -20000000   \n",
-        "Op. Profits              0          0    1170000    2403300    3703257   \n",
-        "Tax                      0          0    -409500    -841155   -1296139   \n",
-        "NOPAT                    0          0     760500    1562145    2407117   \n",
-        "Plus Dep                 0   20000000   20000000   20000000   20000000   \n",
-        "CAPX            -200000000          0          0          0          0   \n",
-        "Free Cash Flow  -200000000   20000000   20760500   21562145   22407117   \n",
-        "Terminal Value        None       None       None       None       None   \n",
+        "                       0         1         2         3         4         5   \\\n",
+        "Revenue                 0  33000000  34650000  36382500  38201625  40111706   \n",
+        "COGS                    0 -12000000 -12480000 -12979200 -13498368 -14038302   \n",
+        "SG&A                    0  -1000000  -1000000  -1000000  -1000000  -1000000   \n",
+        "Less Dep                0 -20000000 -20000000 -20000000 -20000000 -20000000   \n",
+        "Op. Profits             0         0   1170000   2403300   3703257   5073403   \n",
+        "Tax                     0         0   -409500   -841155  -1296139  -1775691   \n",
+        "NOPAT                   0         0    760500   1562145   2407117   3297712   \n",
+        "Plus Dep                0  20000000  20000000  20000000  20000000  20000000   \n",
+        "CAPX           -200000000         0         0         0         0         0   \n",
+        "Free Cash Flow -200000000  20000000  20760500  21562145  22407117  23297712   \n",
+        "Terminal Value          0         0         0         0         0         0   \n",
         "\n",
-        "                       5          6          7          8          9   \\\n",
-        "Revenue          40111706   42117291   44223156   46434313   48756029   \n",
-        "COGS            -14038302  -14599834  -15183828  -15791181  -16422828   \n",
-        "SG&A             -1000000   -1000000   -1000000   -1000000   -1000000   \n",
-        "Less Dep        -20000000  -20000000  -20000000  -20000000  -20000000   \n",
-        "Op. Profits       5073403    6517456    8039327    9643132   11333201   \n",
-        "Tax              -1775691   -2281109   -2813764   -3375096   -3966620   \n",
-        "NOPAT             3297712    4236346    5225563    6268036    7366580   \n",
-        "Plus Dep         20000000   20000000   20000000   20000000   20000000   \n",
-        "CAPX                    0          0          0          0          0   \n",
-        "Free Cash Flow   23297712   24236346   25225563   26268036   27366580   \n",
-        "Terminal Value       None       None       None       None       None   \n",
+        "                      6         7         8         9          10  \n",
+        "Revenue         42117291  44223156  46434313  48756029   51193831  \n",
+        "COGS           -14599834 -15183828 -15791181 -16422828  -17079741  \n",
+        "SG&A            -1000000  -1000000  -1000000  -1000000   -1000000  \n",
+        "Less Dep       -20000000 -20000000 -20000000 -20000000  -20000000  \n",
+        "Op. Profits      6517456   8039327   9643132  11333201   13114089  \n",
+        "Tax             -2281109  -2813764  -3375096  -3966620   -4589931  \n",
+        "NOPAT            4236346   5225563   6268036   7366580    8524158  \n",
+        "Plus Dep        20000000  20000000  20000000  20000000   20000000  \n",
+        "CAPX                   0         0         0         0          0  \n",
+        "Free Cash Flow  24236346  25225563  26268036  27366580   28524158  \n",
+        "Terminal Value         0         0         0         0  100000000  \n",
         "\n",
-        "                       10  \n",
-        "Revenue          51193831  \n",
-        "COGS            -17079741  \n",
-        "SG&A             -1000000  \n",
-        "Less Dep        -20000000  \n",
-        "Op. Profits      13114089  \n",
-        "Tax              -4589931  \n",
-        "NOPAT             8524158  \n",
-        "Plus Dep         20000000  \n",
-        "CAPX                    0  \n",
-        "Free Cash Flow   28524158  \n",
-        "Terminal Value      1e+08  \n",
-        "\n",
-        "[11 rows x 11 columns]\n",
-        "\n",
+        "[11 rows x 11 columns] \n",
         "\n"
        ]
       },
