hw4 exta problems

--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4222dd662e150228140c4329f7ae27860e112c856049d953d2f2b29e323b3143"
+  "signature": "sha256:8724783187879362303433db4f51108e07a7f3bbeaf64de05915e7e9fe3e330b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -664,6 +664,150 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "### Question 11 (Extra)\n",
+      "(5 points) Alpha Inc. has the following two projects that it is\n",
+      "considering, and it wants to choose one. Project A has an investment\n",
+      "outlay/expense today of \\$1,000, and its cash flows over the next three years\n",
+      "are \\$500, \\$600, \\$700. Project B has an outlay of $2,000, and cash flows of\n",
+      "\\$1,000, \\$1,200, and \\$1,400. Which project should Alpha choose? (You can\n",
+      "assume no taxes.)  Cannot make a choice based on information"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Question 12 (Extra) \n",
+      "(10 points) Mango Technology has the following three projects\n",
+      "that it is considering; it can choose only one. Project A has an investment\n",
+      "outlay/expense today of \\$100M, and its cash flows over the next three years\n",
+      "are \\$20M, \\$40M, \\$70M. Project B has an outlay of \\$110M, and cash flows of\n",
+      "\\$40M, \\$80M, \\$20M; Project C has an outlay of \\$120M and cash flows of \\$0M,\n",
+      "\\$20M, and \\$142M. Which project should the company choose if the cost of\n",
+      "capital for similar projects is 6%?  "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Question 13 (Extra): \n",
+      "(5 points) Last year your firm had revenue of \\$36 million, cost\n",
+      "of goods sold (COGS) of \\$32 million, Selling, General, & Administration\n",
+      "costs (SG&A) of \\$3 million, Account Receivables (AR) of \\$6 million, Account\n",
+      "Payables (AP) of \\$4 million and Inventory of \\$4 million. What will be the\n",
+      "free cash flow next/this year if you boost revenue 8%, while holding COGS\n",
+      "growth to 3%, and increasing AP 30%, while everything else remains same as\n",
+      "last year? (Assume no taxes and no additional capital expenditures.) (You\n",
+      "are encouraged to use a spreadsheet even for this specific type of\n",
+      "question.)\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Question 14 (Extra): \n",
+      "(15 points) Starbuck's is considering opening another store in\n",
+      "Chicago. A store is expected to have a long economic life, but the valuation\n",
+      "horizon is 7 years. The store in Chicago is expected to create revenues of\n",
+      "\\$3M in the first year and they are likely to grow at 2% per year\n",
+      "thereafter. The cost of goods sold are \\$1.2M in year 1 and they are also\n",
+      "expected to grow at 2% per year thereafter. Selling and administration costs\n",
+      "are likely to be \\$0.5M in the first year and then grow at 5%. The tax rate\n",
+      "is 35%. Starbucks is so good at managing its stores that working capital\n",
+      "increases can be assumed to be negligible. But Starbucks will have to invest\n",
+      "\\$3.5M in purchasing a store (with land). The good news is that this outlay\n",
+      "can be straight line depreciated over 7 years. Also, Starbucks has estimated\n",
+      "that the terminal value in year 7 dollars will be \\$10M. This value is the\n",
+      "value of all cash flows in year 8 and beyond. What is the NPV of opening\n",
+      "this new store if the appropriate discount rate is 7.75%?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ans.add('<Missing!>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "'<Missing!>'"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "## Answers"
      ]
     },
@@ -689,11 +833,15 @@
         " 7. 74689\n",
         " 8. 9815100\n",
         " 9. 43528493\n",
-        "10. ('H', 23705)\n"
+        "10. ('H', 23705)\n",
+        "11. <Missing!>\n",
+        "12. <Missing!>\n",
+        "13. <Missing!>\n",
+        "14. <Missing!>\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 16
     }
    ],
    "metadata": {}
