--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -668,7 +668,7 @@
       "(5 points) Alpha Inc. has the following two projects that it is\n",
       "considering, and it wants to choose one. Project A has an investment\n",
       "outlay/expense today of \\$1,000, and its cash flows over the next three years\n",
-      "are \\$500, \\$600, \\$700. Project B has an outlay of $2,000, and cash flows of\n",
+      "are \\$500, \\$600, \\$700. Project B has an outlay of \\$2,000, and cash flows of\n",
       "\\$1,000, \\$1,200, and \\$1,400. Which project should Alpha choose? (You can\n",
       "assume no taxes.)  Cannot make a choice based on information"
      ]
