--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8724783187879362303433db4f51108e07a7f3bbeaf64de05915e7e9fe3e330b"
+  "signature": "sha256:31e37f02ed4ef466a42a245853bf079a373ebe2a525446aa6ade8c3f881b7890"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -141,7 +141,12 @@
       "and wants to choose between them. Project A has an investment outlay/expense \n",
       "today of \\$10,000, and its cash flows over the next three years are \\$6,000, \n",
       "\\$6,000, \\$7,000. Project B has an outlay of \\$20,000, and cash flows of \\$10,000, \n",
-      "\\$12,000, and \\$14,000. Which project should you advise your manager to choose?"
+      "\\$12,000, and \\$14,000. Which project should you advise your manager to choose?\n",
+      "\n",
+      "* Either one is fine  \n",
+      "* Cannot decide based on information \n",
+      "* Project A \n",
+      "* Project B"
      ]
     },
     {
@@ -173,7 +178,12 @@
       "choose only one. Project A has an investment outlay/expense today of \\$10M, \n",
       "and its cash flows over the next three years are \\$4M, \\$4M, \\$5M. Project B \n",
       "has an outlay of \\$10M, and cash flows of 0, 0, and \\$14M. Which project \n",
-      "should GE choose if the cost of capital for similar projects is 5%?"
+      "should GE choose if the cost of capital for similar projects is 5%?\n",
+      "\n",
+      "* Should not choose either.\n",
+      "* Project A\n",
+      "* Project B\n",
+      "* Do not have enough information "
      ]
     },
     {
@@ -670,7 +680,12 @@
       "outlay/expense today of \\$1,000, and its cash flows over the next three years\n",
       "are \\$500, \\$600, \\$700. Project B has an outlay of \\$2,000, and cash flows of\n",
       "\\$1,000, \\$1,200, and \\$1,400. Which project should Alpha choose? (You can\n",
-      "assume no taxes.)  Cannot make a choice based on information"
+      "assume no taxes.)\n",
+      "\n",
+      "* Either one is fine  \n",
+      "* Cannot decide based on information \n",
+      "* Project A \n",
+      "* Project B"
      ]
     },
     {
