answer few xtra q's

--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:31e37f02ed4ef466a42a245853bf079a373ebe2a525446aa6ade8c3f881b7890"
+  "signature": "sha256:17621d5cfe5388407574d17221ee0e1abcf9407e8e224931ed358b71ef7dcd44"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -33,7 +33,10 @@
      "metadata": {},
      "source": [
       "### Question 1\n",
-      "(5 points) The project with the highest IRR is always the project with the highest NPV."
+      "(5 points) The project with the highest IRR is always the project with the highest NPV.\n",
+      "\n",
+      "* True\n",
+      "* False"
      ]
     },
     {
@@ -222,7 +225,10 @@
       "(5 points) To get from net operating profits after tax (NOPAT) to free cash \n",
       "flows (FCF), you need to ADD back depreciation, SUBTRACT capital expenditures \n",
       "and ADD net working capital (i.e., current operating assets - current operating \n",
-      "liabilities). (Free cash flow is another name for cash flows.)"
+      "liabilities). (Free cash flow is another name for cash flows.)\n",
+      "\n",
+      "* True\n",
+      "* False"
      ]
     },
     {
@@ -692,7 +698,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "ans.add('Cannot decide based on information')"
      ],
      "language": "python",
      "metadata": {},
@@ -702,7 +708,7 @@
        "output_type": "pyout",
        "prompt_number": 12,
        "text": [
-        "'<Missing!>'"
+        "'Cannot decide based on information'"
        ]
       }
      ],
@@ -726,7 +732,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "r    = 0.06 # 6%/yr discount rate\n",
+      "\n",
+      "cf_a = [-100e6, 20e6, 40e6,  70e6] # Project A cashflows\n",
+      "cf_b = [-110e6, 40e6, 80e6,  20e6] # Project B cashflows\n",
+      "cf_c = [-120e6,    0, 20e6, 142e6] # Project C cashflows\n",
+      "\n",
+      "# Find the largest NPV of the three projects\n",
+      "npv_a   = fi.npv(cf_a, r)\n",
+      "npv_b   = fi.npv(cf_b, r)\n",
+      "npv_c   = fi.npv(cf_c, r)\n",
+      "npv_max = max(npv_a, npv_b, npv_c)\n",
+      "\n",
+      "if   npv_a == npv_max:\n",
+      "    p = 'Project A'\n",
+      "elif npv_b == npv_max:\n",
+      "    p = 'Project B'\n",
+      "else:\n",
+      "    p = 'Project C'\n",
+      "\n",
+      "ans.add(p) "
      ],
      "language": "python",
      "metadata": {},
@@ -736,7 +761,7 @@
        "output_type": "pyout",
        "prompt_number": 13,
        "text": [
-        "'<Missing!>'"
+        "'Project C'"
        ]
       }
      ],
@@ -762,7 +787,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "rev   = 36e6    # $36 million revenues\n",
+      "rev_g = 0.08    # 8%/yr revenue growth\n",
+      "cog   = 32e6    # $32 million COGS\n",
+      "cog_g = 0.03    # 3%/yr revenue growth\n",
+      "sga   = 3e6     # $3 million SG&A\n",
+      "ap    = 4e6     # $4 million Account Payable (AP)\n",
+      "ap_g  = 0.30    # 30%/yr AR growth\n",
+      "wc    = ap*ap_g # change in working capital; only AP is changed\n",
+      "\n",
+      "fcf = fi.comp(rev, 1, rev_g) - fi.comp(cog, 1, cog_g) - sga - wc\n",
+      "\n",
+      "ans.amt(fi.rnd(fcf))"
      ],
      "language": "python",
      "metadata": {},
@@ -772,7 +808,7 @@
        "output_type": "pyout",
        "prompt_number": 14,
        "text": [
-        "'<Missing!>'"
+        "'$1,720,000'"
        ]
       }
      ],
@@ -849,9 +885,9 @@
         " 8. 9815100\n",
         " 9. 43528493\n",
         "10. ('H', 23705)\n",
-        "11. <Missing!>\n",
-        "12. <Missing!>\n",
-        "13. <Missing!>\n",
+        "11. Cannot decide based on information\n",
+        "12. Project C\n",
+        "13. 1720000\n",
         "14. <Missing!>\n"
        ]
       }
