--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -793,7 +793,7 @@
       "cog_g = 0.03    # 3%/yr revenue growth\n",
       "sga   = 3e6     # $3 million SG&A\n",
       "ap    = 4e6     # $4 million Account Payable (AP)\n",
-      "ap_g  = 0.30    # 30%/yr AR growth\n",
+      "ap_g  = 0.30    # 30%/yr AP growth\n",
       "wc    = ap*ap_g # change in working capital; only AP is changed\n",
       "\n",
       "fcf = fi.comp(rev, 1, rev_g) - fi.comp(cog, 1, cog_g) - sga - wc\n",
