--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:17621d5cfe5388407574d17221ee0e1abcf9407e8e224931ed358b71ef7dcd44"
+  "signature": "sha256:9ba8f77868dfffc92d078f2d73ed32f09d43ee74b52ae7c5d33b43196baeccd1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -744,6 +744,8 @@
       "npv_c   = fi.npv(cf_c, r)\n",
       "npv_max = max(npv_a, npv_b, npv_c)\n",
       "\n",
+      "print \"NPV: A=%d, B=%d, C=%d\" % (npv_a, npv_b, npv_c)\n",
+      "\n",
       "if   npv_a == npv_max:\n",
       "    p = 'Project A'\n",
       "elif npv_b == npv_max:\n",
@@ -756,6 +758,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "NPV: A=13241131, B=15727949, C=17025866\n"
+       ]
+      },
       {
        "metadata": {},
        "output_type": "pyout",
@@ -839,17 +848,115 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ans.add('<Missing!>')"
+      "r     = 0.0775    # 7.75%/yr discount rate\n",
+      "\n",
+      "beg   = 0         # First year of project\n",
+      "end   = 7         # Last year of project\n",
+      "life  = end-beg   # Project lifetime\n",
+      "capx  = 3.5e6     # $3.5M Initial CAPX\n",
+      "dep   = capx/life # straight line depreciation \n",
+      "rev_i = 3e6       # $3M initial revenue\n",
+      "rev_g = 0.02      # 2%/yr revenue growth rate\n",
+      "cog_i = 1.2e6     # $1.2M initial COGS \n",
+      "cog_g = 0.02      # 2%/yr COGS growth rate\n",
+      "sga_i = 0.5e6     # $1M/yr SG&A\n",
+      "sga_g = 0.05      # 5%/yr SG&A growth rate\n",
+      "tax_r = 0.35      # 35%/yr tax rate\n",
+      "term  = 10e6      # $10M terminal value\n",
+      "\n",
+      "# Compute the project cashflows\n",
+      "rev   = [+fi.comp(rev_i, i, rev_g) for i in range(life)]\n",
+      "cogs  = [-fi.comp(cog_i, i, cog_g) for i in range(life)]\n",
+      "sga   = [-fi.comp(sga_i, i, sga_g) for i in range(life)]\n",
+      "oppft = [rev[i]+cogs[i]-sga[i]-dep for i in range(life)]   \n",
+      "taxes = [-oppft[i]*tax_r           for i in range(life)]  \n",
+      "nopat = [oppft[i]+taxes[i]         for i in range(life)]\n",
+      "cf    = [nopat[i]+dep              for i in range(life)]\n",
+      "\n",
+      "# Project NPV: CapX + PV(ProjectCashFlow) + PV(TerminalValue)\n",
+      "fcf   = [-capx] + cf \n",
+      "npv   = fi.npv(fcf, r) + fi.disc(term, life, r)\n",
+      "print(\"\\nProject NPV = %d\\n\" % fi.rnd(npv))\n",
+      "\n",
+      "# Cashflow Statement\n",
+      "from pandas import DataFrame \n",
+      "col_names  = range(beg, end+1)\n",
+      "row_labels = [\n",
+      "    'Revenue',               #  1\n",
+      "    'COGS',                  #  2\n",
+      "    'SG&A',                  #  3\n",
+      "    'Less Dep',              #  4\n",
+      "    'Op. Profits',           #  5\n",
+      "    'Tax',                   #  6\n",
+      "    'NOPAT',                 #  7\n",
+      "    'Plus Dep',              #  8\n",
+      "    'CAPX',                  #  9\n",
+      "    'Free Cash Flow',        # 10\n",
+      "    'Terminal Value'         # 11\n",
+      "]\n",
+      "row_data   = [\n",
+      "    [0]     + rev,           #  1\n",
+      "    [0]     + cogs,          #  2\n",
+      "    [0]     + sga,           #  3\n",
+      "    [0]     + ([-dep]*life), #  4\n",
+      "    [0]     + oppft,         #  5\n",
+      "    [0]     + taxes,         #  6\n",
+      "    [0]     + nopat,         #  7\n",
+      "    [0]     + ([dep]*life),  #  8\n",
+      "    [-capx] + ([0]*life),    #  9\n",
+      "    fcf,                     # 10 \n",
+      "    ([0]*life)+[term]        # 11\n",
+      "]\n",
+      "print DataFrame(row_data, columns=col_names, index=row_labels, dtype=int),\"\\n\"\n",
+      "\n",
+      "ans.amt(fi.rnd(npv))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Project NPV = 11792411\n",
+        "\n",
+        "                      0        1        2        3        4        5        6  \\\n",
+        "Revenue               0  3000000  3060000  3121200  3183624  3247296  3312242   \n",
+        "COGS                  0 -1200000 -1224000 -1248480 -1273449 -1298918 -1324896   \n",
+        "SG&A                  0  -500000  -525000  -551250  -578812  -607753  -638140   \n",
+        "Less Dep              0  -500000  -500000  -500000  -500000  -500000  -500000   \n",
+        "Op. Profits           0  1800000  1861000  1923970  1988986  2056131  2125486   \n",
+        "Tax                   0  -630000  -651350  -673389  -696145  -719645  -743920   \n",
+        "NOPAT                 0  1170000  1209650  1250580  1292841  1336485  1381566   \n",
+        "Plus Dep              0   500000   500000   500000   500000   500000   500000   \n",
+        "CAPX           -3500000        0        0        0        0        0        0   \n",
+        "Free Cash Flow -3500000  1670000  1709650  1750580  1792841  1836485  1881566   \n",
+        "Terminal Value        0        0        0        0        0        0        0   \n",
+        "\n",
+        "                       7  \n",
+        "Revenue          3378487  \n",
+        "COGS            -1351394  \n",
+        "SG&A             -670047  \n",
+        "Less Dep         -500000  \n",
+        "Op. Profits      2197140  \n",
+        "Tax              -768999  \n",
+        "NOPAT            1428141  \n",
+        "Plus Dep          500000  \n",
+        "CAPX                   0  \n",
+        "Free Cash Flow   1928141  \n",
+        "Terminal Value  10000000  \n",
+        "\n",
+        "[11 rows x 8 columns] \n",
+        "\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 15,
        "text": [
-        "'<Missing!>'"
+        "'$11,792,411'"
        ]
       }
      ],
@@ -888,7 +995,7 @@
         "11. Cannot decide based on information\n",
         "12. Project C\n",
         "13. 1720000\n",
-        "14. <Missing!>\n"
+        "14. 11792411\n"
        ]
       }
      ],
