error in last prob

--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bdcb9e7871182180569724b8b5bbc94188322946aeaa460696adf919647cb4a6"
+  "signature": "sha256:c4de31a39ae2f02a2805484f5a2d1c628c6fcce98e72652783850bbb4770e9ed"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -522,14 +522,16 @@
       "rev_g = 0.05      # 5%/yr revenue growth rate\n",
       "cog_i = 12e6      # $12M initial COGS \n",
       "cog_g = 0.04      # 4%/yr COGS growth rate\n",
-      "sga   = 1e6       # $1M/yr SG&A\n",
+      "sga_i = 1e6       # $1M/yr SG&A\n",
+      "sga_g = 0         # 0%/yr SG&A growth rate\n",
       "tax_r = 0.35      # 35%/yr tax rate\n",
       "term  = 100e6     # $100M terminal value\n",
       "\n",
       "# Compute the project cashflows\n",
       "rev   = [+fi.comp(rev_i, i, rev_g) for i in range(life)]\n",
       "cogs  = [-fi.comp(cog_i, i, cog_g) for i in range(life)]\n",
-      "oppft = [rev[i]+cogs[i]-sga-dep    for i in range(life)]   \n",
+      "sga   = [-fi.comp(sga_i, i, sga_g) for i in range(life)]\n",
+      "oppft = [rev[i]+cogs[i]+sga[i]-dep for i in range(life)]   \n",
       "taxes = [-oppft[i]*tax_r           for i in range(life)]  \n",
       "nopat = [oppft[i]+taxes[i]         for i in range(life)]\n",
       "cf    = [nopat[i]+dep              for i in range(life)]\n",
@@ -558,7 +560,7 @@
       "row_data   = [\n",
       "    [0]     + rev,           #  1\n",
       "    [0]     + cogs,          #  2\n",
-      "    [0]     + ([-sga]*life), #  3\n",
+      "    [0]     + sga,           #  3\n",
       "    [0]     + ([-dep]*life), #  4\n",
       "    [0]     + oppft,         #  5\n",
       "    [0]     + taxes,         #  6\n",
@@ -868,7 +870,7 @@
       "rev   = [+fi.comp(rev_i, i, rev_g) for i in range(life)]\n",
       "cogs  = [-fi.comp(cog_i, i, cog_g) for i in range(life)]\n",
       "sga   = [-fi.comp(sga_i, i, sga_g) for i in range(life)]\n",
-      "oppft = [rev[i]+cogs[i]-sga[i]-dep for i in range(life)]   \n",
+      "oppft = [rev[i]+cogs[i]+sga[i]-dep for i in range(life)]   \n",
       "taxes = [-oppft[i]*tax_r           for i in range(life)]  \n",
       "nopat = [oppft[i]+taxes[i]         for i in range(life)]\n",
       "cf    = [nopat[i]+dep              for i in range(life)]\n",
@@ -919,19 +921,19 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Project NPV = 11792411\n",
+        "Project NPV = 7879584\n",
         "\n",
         "                      0        1        2        3        4        5        6  \\\n",
         "Revenue               0  3000000  3060000  3121200  3183624  3247296  3312242   \n",
         "COGS                  0 -1200000 -1224000 -1248480 -1273449 -1298918 -1324896   \n",
         "SG&A                  0  -500000  -525000  -551250  -578812  -607753  -638140   \n",
         "Less Dep              0  -500000  -500000  -500000  -500000  -500000  -500000   \n",
-        "Op. Profits           0  1800000  1861000  1923970  1988986  2056131  2125486   \n",
-        "Tax                   0  -630000  -651350  -673389  -696145  -719645  -743920   \n",
-        "NOPAT                 0  1170000  1209650  1250580  1292841  1336485  1381566   \n",
+        "Op. Profits           0   800000   811000   821470   831361   840624   849204   \n",
+        "Tax                   0  -280000  -283850  -287514  -290976  -294218  -297221   \n",
+        "NOPAT                 0   520000   527150   533955   540385   546406   551983   \n",
         "Plus Dep              0   500000   500000   500000   500000   500000   500000   \n",
         "CAPX           -3500000        0        0        0        0        0        0   \n",
-        "Free Cash Flow -3500000  1670000  1709650  1750580  1792841  1836485  1881566   \n",
+        "Free Cash Flow -3500000  1020000  1027150  1033955  1040385  1046406  1051983   \n",
         "Terminal Value        0        0        0        0        0        0        0   \n",
         "\n",
         "                       7  \n",
@@ -939,12 +941,12 @@
         "COGS            -1351394  \n",
         "SG&A             -670047  \n",
         "Less Dep         -500000  \n",
-        "Op. Profits      2197140  \n",
-        "Tax              -768999  \n",
-        "NOPAT            1428141  \n",
+        "Op. Profits       857044  \n",
+        "Tax              -299965  \n",
+        "NOPAT             557078  \n",
         "Plus Dep          500000  \n",
         "CAPX                   0  \n",
-        "Free Cash Flow   1928141  \n",
+        "Free Cash Flow   1057078  \n",
         "Terminal Value  10000000  \n",
         "\n",
         "[11 rows x 8 columns] \n",
@@ -956,7 +958,7 @@
        "output_type": "pyout",
        "prompt_number": 15,
        "text": [
-        "'$11,792,411'"
+        "'$7,879,584'"
        ]
       }
      ],
@@ -995,7 +997,7 @@
         "11. Cannot decide based on information\n",
         "12. Project C\n",
         "13. 1720000\n",
-        "14. 11792411\n"
+        "14. 7879584\n"
        ]
       }
      ],
