--- a/hw4.ipynb
+++ b/hw4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c4de31a39ae2f02a2805484f5a2d1c628c6fcce98e72652783850bbb4770e9ed"
+  "signature": "sha256:312b13f3bf0bb82ff07f5facdfed6e88e3ac1586494ff27edb5f9b055c8417c1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -390,14 +390,16 @@
       "rev_g = 0.25      # 25%/yr revenue growth rate\n",
       "cog_i = 9e6       # $9M initial COGS \n",
       "cog_g = 0.25      # 25%/yr COGS growth rate\n",
-      "sga   = 0         # $0/yr SG&A\n",
+      "sga_i = 0         # $0/yr SG&A\n",
+      "sga_g = 0         # 0%/yr SG&A growth rate\n",
       "tax_r = 0.35      # 35%/yr tax rate\n",
       "term  = 5e6       # $5M terminal value\n",
       "\n",
       "# Compute the project cashflows\n",
       "rev   = [+fi.comp(rev_i, i, rev_g) for i in range(life)]\n",
       "cogs  = [-fi.comp(cog_i, i, cog_g) for i in range(life)]\n",
-      "oppft = [rev[i]+cogs[i]-sga-dep    for i in range(life)]   \n",
+      "sga   = [-fi.comp(sga_i, i, sga_g) for i in range(life)]\n",
+      "oppft = [rev[i]+cogs[i]+sga[i]-dep for i in range(life)]   \n",
       "taxes = [-oppft[i]*tax_r           for i in range(life)]  \n",
       "nopat = [oppft[i]+taxes[i]         for i in range(life)]\n",
       "cf    = [nopat[i]+dep              for i in range(life)]\n",
@@ -426,7 +428,7 @@
       "row_data   = [\n",
       "    [0]     + rev,           #  1\n",
       "    [0]     + cogs,          #  2\n",
-      "    [0]     + ([-sga]*life), #  3\n",
+      "    [0]     + sga,           #  3\n",
       "    [0]     + ([-dep]*life), #  4\n",
       "    [0]     + oppft,         #  5\n",
       "    [0]     + taxes,         #  6\n",
